syntax = "proto3";

package user;

option go_package = "./adapter/pkg/user/pb";

import "google/protobuf/Empty.proto";

service UserService {
  rpc ListUser(google.protobuf.Empty) returns (ListUserResponse);
  rpc GetUser(GetUserIdRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(GetUserIdRequest) returns (DeleteUserResponse);
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message ListUserResponse {
  repeated User data = 1;
}

message GetUserResponse {
  User data = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserResponse {
  int64 status = 1;
  string error = 2;
}

message GetUserIdRequest {
  int64 id = 1;
}

message GetUserIdResponse {
  int64 status = 1;
  string error = 2;
  User data = 3;
}

message DeleteUserResponse {
  int64 status = 1;
  string error = 2;
}